Fixed collapsed toc is visible.

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -67,6 +67,11 @@
 	padding-left: 0;
 }
 
+#dokuwiki__aside #dw__toc ul.toc.invisible
+{
+	display: none;
+}
+
 #dokuwiki__aside #dw__toc > div
 {
 	padding: 0;
